--- a/config/locales/activemodel.en.yml
+++ b/config/locales/activemodel.en.yml
@@ -1,13 +1,16 @@
 en:
-  activemodel:
+  activerecord:
     attributes:
-      essay_registration:
+      essay_proposal:
         id_number: NIM
         title: Judul proposal
         outline_file: Berkas outline proposal
-        registration_form_file: Berkas formulir skripsi
+        form_file: Berkas formulir skripsi
+        payment_proof_file: Berkas bukti pembayaran
+        academic_transcript_file: Berkas transkrip nilai
 
   attributes:
+    id_number: NIM
     name: Nama
     email: Email
     phone_number: Nomor telepon
