--- a/config/locales/activemodel.en.yml
+++ b/config/locales/activemodel.en.yml
@@ -14,7 +14,7 @@ en:
     name: Nama
     email: Email
     phone_number: Nomor telepon
-    kkp_report_submission_proof_file: Bukti pengiriman laporan kkp
+    kkp_report_submission_proof_file: Bukti pengiriman laporan KKP
     current_krs_file: Berkas KRS
     payment_proof: Bukti Pembayaran
     academic_transcripts_file: Berkas transkrip akademik
