--- a/config/locales/activemodel.en.yml
+++ b/config/locales/activemodel.en.yml
@@ -19,3 +19,4 @@ en:
     current_krs_file: Berkas KRS
     payment_proof: Bukti Pembayaran
     academic_transcripts_file: Berkas transkrip akademik
+    official_memo: "Nota Dinas"
